<resources>
    <string name="app_name">Github User App</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="menu_refresh">Refresh</string>
    <string name="setting_menu">Settings</string>
    <string name="share_menu">Share</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_username">username</string>
    <string name="edit_profile_menu">Edit Profile</string>
    <string name="following_count_template">567</string>
    <string name="followers_count_template">255</string>
    <string name="followers_template">followers</string>
    <string name="following_template">following</string>
    <string name="email_template">Email</string>
    <string name="profile_email">saneswari234@gmail.com</string>
    <string name="location_template">Location</string>
    <string name="profile_location">Indonesia</string>
    <string name="organization_template">Organization Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum ipsam necessitatibus neque! Aliquam, aut consectetur consequuntur deserunt error fugit, illum laudantium libero minima, nulla odit quibusdam! Accusantium corporis culpa eaque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet aperiam consequatur dolor esse est eveniet hic libero maxime minima molestiae neque obcaecati officiis quam quasi, qui sint sunt totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquid, animi architecto eligendi fugit harum iste maiores nemo neque nostrum, numquam odio pariatur quasi repellat reprehenderit tenetur unde! Explicabo, ipsum? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus fuga fugiat in quasi quis reiciendis tempore totam voluptatibus? Assumenda, at dignissimos eos est eum explicabo in iure nisi vel! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam cumque eum, illum iste iure labore nihil repudiandae! Aliquam doloribus eius et hic id magni possimus quae totam. Cupiditate, doloremque molestias!</string>
    <string name="bio_template">Bio</string>
    <string name="profile_bio">Android Developer | Backend Developer | IT Support Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam, assumenda aut autem beatae blanditiis commodi consequatur doloribus earum et, iusto laudantium maxime natus quidem quisquam repellat, repellendus ut vero? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, illo non quia quos reiciendis soluta tenetur veritatis voluptatem? Aspernatur dolores dolorum exercitationem facere, illo ipsa odio placeat quam rem vero?</string>
    <string name="message_notification_menu">Message Notification</string>
    <string name="email_notification_menu">Email Notification</string>
    <string name="plus_menu">Plus</string>
    <string name="profile_organization">Universitas Diponegoro</string>
    <string name="repository_template">Repository</string>
    <string name="user_repository">140</string>
    <string name="searchbar_hint">Search</string>
    <string name="microphone_menu">Microphone</string>
    <string name="search_person_template_1">Who are\nyou searching for?</string>
    <string name="search_person_template_2">Search for your favorite thing or find\nsimilar results in this area</string>
</resources>