<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_profile"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            app:menu="@menu/profile_menu"
            app:title="@string/title_profile"
            app:titleTextAppearance="@style/toolbar_text" />

    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ci_profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/profile_image_template"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_profile"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/profile_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/ci_profile_image"
        app:layout_constraintStart_toStartOf="@+id/ci_profile_image"
        app:layout_constraintTop_toBottomOf="@+id/ci_profile_image" />

    <TextView
        android:id="@+id/tv_profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/profile_username"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_profile_name"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />

    <View
        android:id="@+id/v_line"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/tv_profile_username"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_username"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_username" />

    <TextView
        android:id="@+id/tv_followers_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/followers_count_template"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/v_line"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v_line" />

    <TextView
        android:id="@+id/tv_followers_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/followers_template"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_followers_count"
        app:layout_constraintStart_toStartOf="@+id/tv_followers_count"
        app:layout_constraintTop_toBottomOf="@+id/tv_followers_count" />

    <TextView
        android:id="@+id/tv_following_count_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/following_count_template"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/v_line"
        app:layout_constraintTop_toTopOf="@+id/v_line" />

    <TextView
        android:id="@+id/tv_following_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/following_template"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_following_count_template"
        app:layout_constraintStart_toStartOf="@+id/tv_following_count_template"
        app:layout_constraintTop_toBottomOf="@+id/tv_following_count_template"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_followers_template"/>



</androidx.constraintlayout.widget.ConstraintLayout>